--- a/Splitter/View/MainWindow.xaml
+++ b/Splitter/View/MainWindow.xaml
@@ -7,8 +7,8 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         x:Name="MainWindowName"
         WindowStyle="None" AllowsTransparency="{Binding Source={x:Static p:Settings.Default}, Path=AllowsTransparency, Mode=OneTime}"
-        Height="{Binding CurrentFile.UserSettings.WindowHeight, Mode=TwoWay, FallbackValue=400}"
-        Width="{Binding CurrentFile.UserSettings.WindowWidth, Mode=TwoWay, FallbackValue=250}"
+        Height="{Binding CurrentFile.DisplaySettings.WindowHeight, Mode=TwoWay, FallbackValue=400}"
+        Width="{Binding CurrentFile.DisplaySettings.WindowWidth, Mode=TwoWay, FallbackValue=250}"
         MouseDown="Window_MouseDown" Title="Fizzi's Split Timer">
     <Window.DataContext>
         <lvm:MainViewModel />
