--- a/Splitter/View/SettingsWindow.xaml
+++ b/Splitter/View/SettingsWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lvm="clr-namespace:Fizzi.Applications.Splitter.ViewModel"
         xmlns:p="clr-namespace:Fizzi.Applications.Splitter.Properties"
-        Title="Fizzi's Split Timer Settings" Width="500"
+        Title="Fizzi's Split Timer Application Settings" Width="500"
         WindowStyle="ToolWindow" SizeToContent="Height">
     <Grid>
         <Grid.Style>
@@ -21,7 +21,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         
-        <TabControl Grid.Row="0">
+        <TabControl Margin="3" Grid.Row="0">
             <TabItem Header="Global">
                 <StackPanel>
                     <GroupBox Margin="3" Header="Hotkeys">
